# industry_detection

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Industry_Detection.pro  MyStl.cpp  MyStl.h  ScannerHook.cpp  ScannerHook.h  aboutwidget.cpp  aboutwidget.h  addcameradialog.cpp  addcameradialog.h  algoclass.cpp  algoclass.h  algoclass_abut.cpp  algoclass_abut.h  algoclass_bottom.cpp  algoclass_bottom.h  algoclass_lift.cpp  algoclass_lift.h  algoclass_nayin.cpp  algoclass_nayin.h  algoclass_ny.cpp  algoclass_ny.h  algoclass_pin.cpp  algoclass_pin.h  algoclass_plate.cpp  algoclass_plate.h  algoclass_side.cpp  algoclass_side.h  algoclass_top.cpp  algoclass_top.h  algoclass_xs.cpp  algoclass_xs.h  application.aps  application.rc  cameral.cpp  cameral.h  cameralabelwidget.cpp  cameralabelwidget.h  (+104 more)
include/: Api_FlowerPinDetection.h  Api_Welding.h  BraidedTape.h  BraidedTapeParam.h  CapacitanceProgram.h  DBOperation.h  FlowerPinParam.h  MZ_ADOConn.h  MZ_ClientControl.h  MZ_PCI1230.h  MZ_VC3000.h  MZ_VC3000H.h  MZ_VC5000.h  MsvDeviceLib.h  Mz_LogConn.h  PacketHead.h  Param.h  common.h  infer.h  testdll.h
include/opencv2/: opencv2 - 快捷方式.lnk
ini/: Cameral1.txt
ini/camera1/: algo.json  camera1.rar  cameral.json  range.json  range.rar
ini/camera2/: algo.json  cameral.json  range.json
ini/camera3/: range.json
ini/camera7/: range.json
ini/globe/: cameral.json  other.json
lib/: 1T4Library.lib  1T4OVDetector.lib  BraidedTape.lib  CapacitanceProgram.lib  FlowerPinDetection.lib  MZ_ADOConnect.lib  MZ_CameraDevice.lib  MZ_ClientControl.lib  MZ_Log.lib  MvIOInterfaceBox.lib  OVDetector.lib  PCI1230.lib  PCI1230DLL.lib  SqliteDB.lib  VC3000DLL.lib  VC3000HDLL.lib  VC5000DLL.lib  msado15.tlh  testdll.lib
lib/Release_openvino/: openvino_c.lib  openvino_tensorflow_frontend.lib  openvino_tensorflow_lite_frontend.lib
var/: app.log2025_6_16.txt  app.log2025_6_17.txt  app.log2025_6_18.txt
